--- a/example/simple/src/App.css
+++ b/example/simple/src/App.css
@@ -1,10 +1,32 @@
 .app {
+  padding: 16px 8px;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  align-items: center;
+  justify-content: center;
 }
 
+.split-selection {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
+.splits {
+  margin: 36px 0;
+  width: 100%;
+  height: 100%;
+  max-height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  border: 1px solid #794D1F;
+  border-radius: 8px;
+}
 
 
